fix: distorted help button

--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -61,6 +61,7 @@ header > h1 > span {
   --size: 2rem;
   width: var(--size);
   height: var(--size);
+  flex-shrink: 0;
   padding: 0;
   border: none;
   border-radius: 50%;
